--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "styled-components": "^6.1.8",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
